--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="common_tips">提示</string>
-    <string name="common_confirm">确定</string>
-    <string name="common_cancel">取消</string>
-    <string name="common_empty">这里什么都没有</string>
-    <string name="common_retry">重试</string>
+    <string name="common_tips">Hint</string>
+    <string name="common_confirm">Sure</string>
+    <string name="common_cancel">Cancel</string>
+    <string name="common_empty">Nothing here</string>
+    <string name="common_retry">Retry</string>
 </resources>
